# scb-data-platform

./: .gitignore.rtf  .gitignore.txt  Dockerfile.test  backend-logs.txt  init-logs.txt  ps-output.txt  scheduler-logs.txt  webserver-logs.txt
backend/: main.py  pyproject.toml  requirements.txt
backend/api/v1/: deps.py  test_ontology_api.py
backend/api/v1/endpoints/: admin.py  auth.py  data.py  files.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py  test_ontology_api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  data.py  files.py  ontology.py
backend/app/clients/: airflow_client.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/db/: session.py
backend/app/repositories/: data_lake_repo.py  ontology_repo.py  test_ontology_repo.py  user_repo.py  warehouse_repo.py
backend/app/schemas/: common_schemas.py  data_schemas.py  file_schemas.py  test_ontology_schemas.py  user_schemas.py  verification_schemas.py
backend/app/scripts/: create_superuser.py
backend/app/services/: admin_service.py  auth_service.py  data_query_service.py  file_processing_service.py  ontology_service.py  test_ontology_service.py  verification_service.py
backend/clients/: airflow_client.py
backend/core/: config.py
backend/db/: session.py
backend/repositories/: log_repo.py  user_repo.py
backend/schemas/: admin_schemas.py  data_schemas.py  ontology_schemas.py  test_ontology_schemas.py  token_schemas.py
backend/scripts/: create_first_user.py  create_superuser.py
backend/services/: admin_service.py  auth_service.py  exceptions.py  file_processing_service.py  test_ontology_service.py  verification_service.py
backend/tests/: conftest.py
backend/utils/: logging_utils.py
docs/guides/: local_development_setup.md
etl/: airflow.cfg  pyproject.toml  requirements.txt
etl/dags/: file_processing_dag.py  manual_reparse_dag.py  ontology_sync_dag.py  test_pythonpath_dag.py
etl/dags/ontology/: README.md
etl/dags/ontology/versions/v1.0/: schema.yaml
etl/src/clients/: airflow_client.py
etl/src/extract/: mongo_extractor.py
etl/src/llm/: exceptions.py  llm_client.py  prompt_formatter.py
etl/src/load/: clickhouse_loader.py  mongo_updater.py
etl/src/ontology/: ontology_loader.py  ontology_parser.py  ontology_updater.py
etl/src/transform/cleaning/: cleaner.py
etl/src/transform/null_handling/: null_handler.py
etl/src/transform/parsing/: excel_parser.py  llm_parser.py  parser_orchestrator.py  pdf_parser.py
etl/src/transform/validation/: type_validator.py  validator.py  vocabulary_validator.py
etl/src/utils/: config_utils.py  db_clients.py  logging_utils.py
frontend/: .env  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: App.tsx  hooks.ts  router.tsx  store.ts
frontend/src/components/Chart/: AppLineChart.tsx
frontend/src/components/Layout/: AuthLayout.tsx  MainLayout.tsx
frontend/src/components/Table/: index.tsx
frontend/src/features/admin/components/: ReparsePanel.tsx
frontend/src/features/auth/: slice.ts  types.ts
frontend/src/features/auth/components/: LoginForm.tsx
frontend/src/features/auth/hooks/: useAuth.ts
frontend/src/features/dataExplorer/: slice.ts
frontend/src/features/dataExplorer/components/: DataChart.tsx  DataTable.tsx  ExportButton.tsx  QueryBuilder.tsx
frontend/src/features/dataExplorer/hooks/: useDataExplorer.ts
frontend/src/features/fileUpload/: FileUploadSection.tsx  index.ts
frontend/src/features/fileUpload/components/: FileUploadDropzone.tsx  FileUploadList.tsx  FileUploadSection.tsx
frontend/src/features/fileUpload/hooks/: useFileUploadManager.ts
frontend/src/features/ontologyManagement/: ontologySlice.ts
frontend/src/features/ontologyManagement/components/: OntologySchemaViewer.tsx
frontend/src/features/verification/: types.ts  verificationSlice.ts
frontend/src/features/verification/components/: CorrectionInput.tsx  DataVerifier.tsx  VerificationControls.tsx  VerificationQueueTable.tsx
frontend/src/features/verification/hooks/: useVerificationQueue.ts  useVerificationTask.ts
frontend/src/pages/: AdminPage.tsx  DataExplorerPage.tsx  FileUploadPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OntologyManagementPage.tsx  UserProfilePage.tsx  VerificationPage.tsx
frontend/src/services/: adminApi.ts  apiClient.ts  authApi.ts  dataApi.ts  filesApi.ts  ontologyApi.ts
frontend/src/utils/: dateUtils.ts
infra/: README.md
infra/compose/: .env  .env.example  docker-compose.simple.yml  docker-compose.yml
infra/docker/backend/: .dockerignore  Dockerfile  Dockerfile.simple
infra/docker/etl/: Dockerfile
infra/docker/frontend/: .dockerignore  Dockerfile
ontology/versions/v1.0/vocabularies/: countries.yaml
scripts/: create_admin.py
scripts/admin/: create_user_hash.py  reset_user_password.py
