[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for SCB Data Platform"
authors = ["Andrew Krylov <89921337+andreynes@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "~3.10"

# --- Core FastAPI & Server ---
fastapi = "^0.111.0"
uvicorn = {version = "^0.29.0", extras = ["standard"], optional = true}
pydantic = {version = "^2.7.1", extras = ["email"]}
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"

# --- Authentication (ИЗМЕНЕНИЯ ЗДЕСЬ) ---
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
# 1. Убираем extra 'bcrypt' у passlib, чтобы он не тянул последнюю версию bcrypt
passlib = "^1.7.4"
# 2. Добавляем bcrypt ЯВНО, чтобы зафиксировать совместимую версию 3.2.0
bcrypt = "3.2.0"

# --- Databases ---
motor = "^3.4.0"
clickhouse-connect = {version = "^0.8.17", extras = ["async"], optional = true}
aiohttp = {version = "^3.9.5", optional = true}

[tool.poetry.group.dev.dependencies]
mongomock-motor = "^0.0.36"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.1"
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.poetry.extras]
async = ["uvicorn", "clickhouse-connect", "aiohttp"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"