[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for SCB Data Platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.10"
# --- Core FastAPI & Server ---
fastapi = "^0.111.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
pydantic = {version = "^2.7.1", extras = ["email"]}
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
# --- Authentication ---
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
# --- Databases ---
motor = "^3.4.0"
clickhouse-connect = {extras = ["async"], version = "^0.8.18"} # Явно указываем 0.8.1
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.1"
httpx = "^0.27.0"
faker = "^25.8.0"
mongomock-motor = "^0.0.36"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"