[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL processes for the SCB Data Platform"
authors = ["Andrew Krylov <89921337+andreynes@users.noreply.github.com>"]
packages = [
    { include = "etl_src" }, # Указываем, что наш главный пакет - это etl_src
]

[tool.poetry.dependencies]
python = "~3.10"

# Основные ETL зависимости
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pdfplumber = "^0.11.1"
pydantic = "^2.7.1" # pydantic-settings здесь не нужен, если вы не используете его напрямую в ETL
                   # pydantic нужен для моделей, которые могут быть общими с backend

# Зависимости для баз данных
pymongo = {extras = ["srv"], version = "^4.7.2"}
clickhouse-connect = "^0.8.17"


[tool.poetry.group.dev.dependencies]
# Сюда можно будет добавить pytest, ruff и т.д. для разработки

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"