[tool.poetry]
name = "etl_package"
version = "0.1.0"
description = "ETL processes for SCB DB"
authors = ["Andrew Krylov <89921337+andreynes@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "etl", from = "."}]

[tool.poetry.dependencies]
python = "~3.10"

# Основные ETL зависимости
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pdfplumber = "^0.11.1"
pydantic = "^2.7.1" # pydantic-settings здесь не нужен, если вы не используете его напрямую в ETL
                   # pydantic нужен для моделей, которые могут быть общими с backend

# Зависимости для баз данных
pymongo = {extras = ["srv"], version = "^4.7.2"}
clickhouse-connect = "^0.8.17"
openai = "^1.88.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
# Сюда можно будет добавить pytest, ruff и т.д. для разработки

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"